Fixed overflow, pt3

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1248,7 +1248,7 @@ thead .fc-day-today .fc_daygeader__title::after {
 
   background-color: #fff;
   border: 1px dashed var(--basic-blue);
-  margin: 3px 2px 10px 3px;
+  margin: 4px 2px 10px 3px;
 }
 
 .cf_dayfeel__content span {
